@@ -2,6 +2,7 @@
 Version: 0.2.13
 Date: ????
   Changes:
+    - For assembling machine output inserters, add shortcuts for spoiled ingredients
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.12
 Date: 2025-01-11
